fix the login and registration header

--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -3,8 +3,8 @@
 {% block auth_content %}
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
-        <a href="/" class="h1">
-            <b>Admin</b>Panel
+        <a href="/" class="h3">
+            Login
         </a>
     </div>
     <div class="card-body">
