--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -8,7 +8,7 @@
         </a>
     </div>
     <div class="card-body">
-        <p class="login-box-msg">Sign in to start your session</p>
+        <p class="login-box-msg">Sign up to start your session</p>
         <form method="post">
             {% csrf_token %}
             {% for input in form %}
