--- a/inventory/templates/chemical.html
+++ b/inventory/templates/chemical.html
@@ -26,7 +26,7 @@
             <div class="card-header d-flex justify-content-between align-items-center w-100">
                 <div>
                     <h3 class="card-title font-weight-bold">
-                        Latest Equipments
+                        Chemical List
                     </h3>
                 </div>
                 <div class="ml-auto">
