--- a/inventory/templates/forms/update_form.html
+++ b/inventory/templates/forms/update_form.html
@@ -47,6 +47,7 @@
                        {% endif %}
                     {% endfor %}
                     <button type="submit" class="btn btn-primary">{{ button_name }}</button>
+                    <button onclick="back()" type="button" class="btn btn-success">{{ back_button }}</button>
                 </form>
             </div>
         </div>
