--- a/inventory/templates/user.html
+++ b/inventory/templates/user.html
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h3 class="card-title font-weight-bold">
-                    Latest Equipments
+                    Users List
                 </h3>
                 <div class="ml-auto">
                     <a href="{% url 'inventory:add_user' %}" class="btn btn-primary">
@@ -48,16 +48,16 @@
                         <tbody>
                             {% for user in users %}
                             <tr>
-                                <td>{{ user.username }}</td>
-                                <td>{{ user.first_name }}</td>
-                                <td>{{ user.last_name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>{{ user.date_joined }}</td>
+                                <td>{{ user.username|default:"-" }}</td>
+                                <td>{{ user.first_name|default:"-" }}</td>
+                                <td>{{ user.last_name|default:"-" }}</td>
+                                <td>{{ user.email|default:"-" }}</td>
+                                <td>{{ user.date_joined|default:"-" }}</td>
                                 <td>
-                                    <a href="" class="text-success">
+                                    <a href="{% url 'inventory:update_user' user_id=user.id %}" class="text-success">
                                         <i class="fa-solid fa-pen-to-square"></i>
                                     </a>
-                                    <a href="" class="text-danger">
+                                    <a href="{% url 'inventory:delete_user' user_id=user.id %}" class="text-danger">
                                         <i class="fa-regular fa-trash-can"></i>
                                     </a>
                                 </td>
