add mor efixes t[D[D[D[D[D[D[D[[[C[C[C[C[C[C[Ce fixes to the dashboard

--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -24,21 +24,6 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-3 col-6">
-        <div class="small-box bg-info">
-            <div class="inner">
-                <h3>{{ total_equipments }}</h3>
-                <p>Equipments</p>
-            </div>
-            <div class="icon">
-                <i class="ion ion-bag"></i>
-            </div>
-            <a href="{% url 'inventory:equipments' %}" class="small-box-footer">
-                More info
-                <i class="fas fa-arrow-circle-right"></i>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-6">
         <div class="small-box bg-success">
             <div class="inner">
                 <h3>
@@ -50,6 +35,21 @@
                 <i class="ion ion-stats-bars"></i>
             </div>
             <a href="{% url 'inventory:chemicals' %}" class="small-box-footer">
+                More info
+                <i class="fas fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-6">
+        <div class="small-box bg-info">
+            <div class="inner">
+                <h3>{{ total_chemical_category }}</h3>
+                <p>Chemical Category</p>
+            </div>
+            <div class="icon">
+                <i class="ion ion-bag"></i>
+            </div>
+            <a href="{% url 'inventory:chemical_category' %}" class="small-box-footer">
                 More info
                 <i class="fas fa-arrow-circle-right"></i>
             </a>
@@ -74,7 +74,7 @@
         <div class="small-box bg-danger">
             <div class="inner">
                 <h3>65</h3>
-                <p>Borrowed Items</p>
+                <p>Available Chemicals</p>
             </div>
             <div class="icon">
                 <i class="ion ion-pie-graph"></i>
