--- a/inventory/templates/includes/sidebar.html
+++ b/inventory/templates/includes/sidebar.html
@@ -77,7 +77,7 @@
             <a href="#" class="nav-link {% if request.path == '/users/' %}bg-primary{% endif %}">
               <i class="nav-icon fa-solid fa-users"></i>
               <p>
-                Users
+                Personnels
                 <i class="fas fa-angle-left right"></i>
               </p>
             </a>
@@ -85,7 +85,7 @@
               <li class="nav-item">
                 <a href="{% url 'inventory:users' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Users</p>
+                  <p>Personnel List</p>
                 </a>
               </li>
             </ul>
