added available chemicals

--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -73,7 +73,7 @@
     <div class="col-lg-3 col-6">
         <div class="small-box bg-danger">
             <div class="inner">
-                <h3>65</h3>
+                <h3>{{ available_chemicals }}</h3>
                 <p>Available Chemicals</p>
             </div>
             <div class="icon">
