--- a/inventory/templates/includes/sidebar.html
+++ b/inventory/templates/includes/sidebar.html
@@ -113,6 +113,14 @@
               </li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a href="/admin" class="nav-link">
+              <i class="nav-icon fa-solid fa-user-shield"></i>
+              <p>
+                Super Admin
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
