--- a/inventory/templates/forms/delete_form.html
+++ b/inventory/templates/forms/delete_form.html
@@ -42,10 +42,14 @@
                             <i class="fa-regular fa-trash-can"></i>
                             Remove Warning
                         </h5>
-                        Are you sure, you want to remove the the <b>{{ object }}</b>?
+                        Are you sure, you want to remove the the
+                        <b>{{ object }}</b>
+                        ?
                     </div>
-                    <button type="submit" class="btn btn-danger">{{ button_name }}</button>
-                    <button onclick="back()" type="button" class="btn btn-success">{{ back_button }}</button>
+                    <div class="mt-2">
+                        <button type="submit" class="btn btn-danger">{{ button_name }}</button>
+                        <button onclick="back()" type="button" class="btn btn-success">{{ back_button }}</button>
+                    </div>
                 </form>
             </div>
         </div>
