--- a/inventory/templates/chemical.html
+++ b/inventory/templates/chemical.html
@@ -22,6 +22,7 @@
 {% block content %}
 <div class="row">
     <section class="col-lg-12 connectedSortable">
+        {% include './includes/message.html' %}
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center w-100">
                 <div>
