--- a/inventory/templates/user.html
+++ b/inventory/templates/user.html
@@ -21,6 +21,7 @@
 {% block content %}
 <div class="row">
     <section class="col-lg-12 connectedSortable">
+        {% include './includes/message.html' %}
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h3 class="card-title font-weight-bold">
