add form input in the reports page

--- a/inventory/templates/chemical_report.html
+++ b/inventory/templates/chemical_report.html
@@ -28,11 +28,27 @@
                 </h3>
             </div>
             <div class="card-body">
-                <form method="post">
-                    {{ form_filter.as_p }}
+                <form action="{% url 'inventory:generate_report' %}" method="post">
+                    {% csrf_token %}
+                    {% for input in form_filter %}
+                   
 
+                    {% if input.id_for_label == "id_available_chemical" %}
+                    <div class="custom-control custom-checkbox">
+                        {{ input }}
+                        <label for="{{ input.id_for_label }}" class="custom-control-label">{{ input.label }}</label>
+                    </div>
+                    {% else %}
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success">Download Chemica Report</button>
+                        <label for="{{ input.id_for_label }}">{{ input.label }}</label>
+                        {{ input }}
+                    </div>
+                    {% endif %}
+
+                    {% endfor %}
+
+                    <div class="form-group mt-2">
+                        <button type="submit" class="btn btn-success">{{ button_name }}</button>
                     </div>
                 </form>
             </div>
