--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -103,7 +103,7 @@
                                 <th>Chemical</th>
                                 <th>Composition</th>
                                 <th>Quantity</th>
-                                <th>Category</th>
+                                <th>Hazard Type</th>
                                 <th>Expiration Date</th>
                             </tr>
                         </thead>
@@ -123,7 +123,7 @@
                                 <th>Chemical</th>
                                 <th>Composition</th>
                                 <th>Quantity</th>
-                                <th>Category</th>
+                                <th>Hazard Type</th>
                                 <th>Expiration Date</th>
                             </tr>
                         </tfoot>
