--- a/inventory/templates/includes/sidebar.html
+++ b/inventory/templates/includes/sidebar.html
@@ -45,7 +45,7 @@
               <li class="nav-item">
                 <a href="{% url 'inventory:chemical_category' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Category</p>
+                  <p>Hazard Type</p>
                 </a>
               </li>
             </ul>
