--- a/inventory/templates/chemical_report.html
+++ b/inventory/templates/chemical_report.html
@@ -21,36 +21,29 @@
 {% block content %}
 <div class="row">
     <section class="col-lg-12 connectedSortable">
+        {% include './includes/message.html' %}
         <div class="card">
             <div class="card-header">
                 <h3 class="card-title font-weight-bold">
                     Report Filter
                 </h3>
             </div>
-            <div class="card-body">
-                {{ form.non_field_errors }}
-                {{ form.date_from.errors }}
-                {{ form.date_from.label_tag }}
-                
+            <div class="card-body">    
                 <form action="{% url 'inventory:generate_report' %}" method="post">
                     {% csrf_token %}
                     {% for input in form_filter %}
-                   
-
-                    {% if input.id_for_label == "id_available_chemical" %}
-                    <div class="custom-control custom-checkbox">
-                        {{ input }}
-                        <label for="{{ input.id_for_label }}" class="custom-control-label">{{ input.label }}</label>
-                    </div>
-                    {% else %}
-                    <div class="form-group">
-                        <label for="{{ input.id_for_label }}">{{ input.label }}</label>
-                        {{ input }}
-                    </div>
-                    {% endif %}
-
+                        {% if input.id_for_label == "id_available_chemical" %}
+                            <div class="custom-control custom-checkbox mb-2">
+                                {{ input }}
+                                <label for="{{ input.id_for_label }}" class="custom-control-label">{{ input.label }} {% if input.id_for_label == "id_available_chemical" %}<span class="text-danger">*</span>{% endif %}</label>
+                            </div>
+                        {% else %}
+                        <div class="form-group">
+                            <label for="{{ input.id_for_label }}">{{ input.label }} {% if input.id_for_label == "id_chemical_category" or input.id_for_label == "id_chemical_units" %}<span class="text-danger">*</span>{% endif %}</label>
+                            {{ input }}
+                        </div>
+                        {% endif %}
                     {% endfor %}
-
                     <div class="form-group mt-2">
                         <button type="submit" class="btn btn-success">{{ button_name }}</button>
                     </div>
