--- a/inventory/templates/chemical_report.html
+++ b/inventory/templates/chemical_report.html
@@ -20,7 +20,7 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-    <section class="col-lg-12 connectedSortable">
+    <section class="col-lg-12">
         {% include './includes/message.html' %}
         <div class="card">
             <div class="card-header">
