added the generating pdf feature

--- a/inventory/templates/pdfs/template_pdf.html
+++ b/inventory/templates/pdfs/template_pdf.html
@@ -29,7 +29,7 @@
     .header h3 {
         margin: 0px;
         padding: 0px;
-        color: #097eaf;
+        color: #198754;
     }
 
     .header span {
@@ -58,7 +58,7 @@
     }
 
     thead tr th {
-        background-color: #097eaf;
+        background-color: #198754;
         color: #ffffff;
     }
 
@@ -75,7 +75,7 @@
             <h3>University of Southern Mindanao</h3>
             <span>College of Science and Mathematics</span>
             <span>Email Address: laboratoryname@gmail.com</span>
-            <span>{{ date }}</span>
+            <span>Date: {{ date }}</span>
         </div>
         <img src="{% static 'dist/img/laboratory.png' %}">   
     </div>
