--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -32,7 +32,7 @@
                 <p>Chemicals</p>
             </div>
             <div class="icon">
-                <i class="ion ion-stats-bars"></i>
+                <i class="fa-solid fa-flask-vial"></i>
             </div>
             <a href="{% url 'inventory:chemicals' %}" class="small-box-footer">
                 More info
@@ -47,7 +47,7 @@
                 <p>Chemical Category</p>
             </div>
             <div class="icon">
-                <i class="ion ion-bag"></i>
+                <i class="fa-solid fa-flask-vial"></i>
             </div>
             <a href="{% url 'inventory:chemical_category' %}" class="small-box-footer">
                 More info
@@ -62,7 +62,7 @@
                 <p>Users</p>
             </div>
             <div class="icon">
-                <i class="ion ion-person-add"></i>
+                <i class="fa-solid fa-users"></i>
             </div>
             <a href="{% url 'inventory:users' %}" class="small-box-footer">
                 More info
@@ -77,7 +77,7 @@
                 <p>Available Chemicals</p>
             </div>
             <div class="icon">
-                <i class="ion ion-pie-graph"></i>
+                <i class="fa-solid fa-flask-vial"></i>
             </div>
             <a href="#" class="small-box-footer">
                 More info
