--- a/inventory/templates/includes/footer.html
+++ b/inventory/templates/includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2024</strong>
+    <strong>Copyright &copy; 2024</strong>
 </footer>
