--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -9,6 +9,24 @@
     </div>
     <div class="card-body">
         <p class="login-box-msg">Sign in to start your session</p>
+        {% include './../includes/message.html' %}
+
+        {% for field, errors in form.errors.items %}
+            {% for error in errors %}
+            <div class="alert alert-danger alert-dismissible">
+                <button
+                    type="button"
+                    class="close"
+                    data-dismiss="alert"
+                    aria-hidden="true"
+                >×</button>
+                <h5>
+                    <i class="icon fas fa-x"></i> Opppps!
+                </h5>
+                {{ error }}
+            </div>
+            {% endfor %}
+        {% endfor %}
         <form method="post">
             {% csrf_token %}
             {% for input in form %}
