--- a/inventory/templates/registration/auth_base.html
+++ b/inventory/templates/registration/auth_base.html
@@ -15,7 +15,7 @@
         {% block css %}{% endblock %}
     </head>
     <body class="hold-transition login-page">
-        <div class="login-box">
+        <div class="w-50">
            {% block auth_content %}{% endblock %}
         </div>
         <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
