revise the code and added custom auth instead of django built in auth

--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -52,7 +52,7 @@
             </div>
         </form>
         <p class="mt-2">
-            Already have an account? <a href="{% url 'login' %}" class="text-center">Login</a>
+            Already have an account? <a href="{% url 'inventory:login' %}" class="text-center">Login</a>
         </p>
     </div>
 </div>
