--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -53,9 +53,9 @@
                 </div>
             </div>
         </form>
-        <p class="mt-2">
+        <!-- <p class="mt-2">
             Don't have an account? <a href="{% url 'inventory:register' %}" class="text-center">Register</a>
-        </p>
+        </p> -->
     </div>
 </div>
 <script>
